feat(console): add sdk:* tasks for the native SDK build/publish scripts
tools/console gains a console.sdk namespace + bb tasks wrapping every new SDK
script: sdk:build-native, sdk:gen-bindings, sdk:build-core <lang>,
sdk:manifest:{uniffi,nif}, sdk:publish <lang>. Registered in the help/ls
registry; lang guards validate the target. Verified via bb ls/tasks.